--- a/src/components/products-list/index.css
+++ b/src/components/products-list/index.css
@@ -5,8 +5,6 @@
     justify-content: space-between;
     align-items: center;
     padding: 0 .5em;
-    position: relative;
-    z-index: -1;
 }
 
 .message-list {
