--- a/src/components/products-list/product/index.css
+++ b/src/components/products-list/product/index.css
@@ -37,8 +37,6 @@
     text-align: center;
     margin-bottom: 1em;
     overflow: hidden;
-    position: relative;
-    z-index: 2;
 }
 
 .product-thumb,
